--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                 </div>
         </div>
 
-<br>
+<br> 
 <br>
 <br>
         <div class="section-title">
@@ -147,6 +147,17 @@
           class="twitter-share-button" data-show-count="false"><img src="https://t.co/LDQzHT4c2b"/></a>
         </div>
         </div>
+
+        <div class="section-title">
+          <p id="top">Media Coverage</p>
+          <br>
+          <ul>
+          <li><a href="https://www.livemint.com/money/personal-finance/housing-on-road-to-recovery-but-potholes-loom-11652112671001.html"><p style="font-size:large; font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-weight: 400; font-style: inherit;font-display:inherit;"></p><u>Housing on road to recovery but potholes loom</u> <i>Mint, May 10th 2022</i></a></li>
+          <br>
+          <li><a href="https://www.thehindubusinessline.com/opinion/will-the-housing-market-see-a-w-shaped-recovery/article35637225.ece?"><p style="font-size:large; font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-weight: 400; font-style: inherit;font-display:inherit;"></p><u>Will the Housing Market see a W-shaped recovery?</u> <i>The Hindu BusinessLine, July 30th 2021</i></a></li>
+          </ul>
+        </div>
+
       </div>
     </section>
 
@@ -155,6 +166,15 @@
       <a href="assets/report/Housing Price Index (HPI) - Indian RE market through the lens of HPI.pdf" target="_blank" class="btn" style="width:100%; height:20%" text-align="center" display="block">Download white paper</a>
     </div>
   </section>
+
+<br>
+<br>
+
+      
+    
+  
+  
+  
 
   </main>
 
