--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
           <p id="top">Media Coverage</p>
           <br>
           <ul>
-          <li><a href="https://www.livemint.com/money/personal-finance/housing-on-road-to-recovery-but-potholes-loom-11652112671001.html"><p style="font-size:large; font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-weight: 400; font-style: inherit;font-display:inherit;"></p><u>Housing on road to recovery but potholes loom</u> <i>Mint, May 10th 2022</i></a></li>
+          <li><a href="https://www.livemint.com/money/personal-finance/housing-on-road-to-recovery-but-potholes-loom-11652112671001.html"><p style="font-size:large; font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-weight: 400; font-style: inherit;font-display:inherit;"></p><u>Housing on road to recovery but potholes loom.</u> <i>Mint, May 10th 2022</i></a></li>
           <br>
           <li><a href="https://www.thehindubusinessline.com/opinion/will-the-housing-market-see-a-w-shaped-recovery/article35637225.ece?"><p style="font-size:large; font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-weight: 400; font-style: inherit;font-display:inherit;"></p><u>Will the Housing Market see a W-shaped recovery?</u> <i>The Hindu BusinessLine, July 30th 2021</i></a></li>
           </ul>
