--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         <div class="row content" data-aos="fade-up">
           <!-- <div class="col-lg-6"> -->
             <p style="font-size:large; font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-weight: 400; font-style: inherit;font-display:inherit;">
-              The tracks residential home prices and quantities across the eight largest cities in India. The indices are constructed using quarterly survey data collected by Housing.com and are available from 2017-present. The survey includes information on price per square foot, quantity, and the total value of transactions for various sub-localities within each city collected from real-estate developers and brokers. The India level indices provide an average movement in prices and quantities across the eight cities. Finally, each index is normalized to a value of 100 in January 2017.</p>
+              The Housing Price Index (HPI) tracks residential home prices and quantities across the eight largest cities in India. The indices are constructed using quarterly survey data collected by Housing.com and are available from 2017-present. The survey includes information on price per square foot, quantity, and the total value of transactions for various sub-localities within each city collected from real-estate developers and brokers. The India level indices provide an average movement in prices and quantities across the eight cities. Finally, each index is normalized to a value of 100 in January 2017.</p>
           <!-- </div> -->
         </div>
       </div>
